--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ psycopg2-binary
 sklearn
 tox
 coverage
+transformers
+https://download.pytorch.org/whl/cpu/torch-1.4.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
 langdetect # for PDF conversions
 # optional: sentence-transformers
